--- a/src/views/partials/navegacion.hbs
+++ b/src/views/partials/navegacion.hbs
@@ -31,7 +31,7 @@
         </li>
         {{else}}
           <li class="nav-item">
-            <a class="nav-link " aria-current="page" href="/users/signin">Login</a>
+            <a class="nav-link " aria-current="page" href="/users/signin">Ingresar</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/users/signup">Registrar</a>
