--- a/src/views/users/ingresar.hbs
+++ b/src/views/users/ingresar.hbs
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-md-4 mx-auto mt-3 md-3">
+    <div class="col-md-4 mx-auto mt-3 mb-3">
         <div class="card">
             <div class="card-header">
                 <h1 class="text-center">Ingreso de usuario</h1>
