--- a/src/views/about.hbs
+++ b/src/views/about.hbs
@@ -1,7 +1,79 @@
-<div class="card mt-3 mb-3">
-    <div class="car-body">
-        <h1>Nosotros</h1>
-        <p>Participantes: Juan Marcelo Delima, Franco Sergio, Guillermo Chomik 
-        </p>
+<div class="d-flex">
+    <div class="row-md-3 mt-3 mx-auto d-flex">
+        <div class="card me-3 mt-3 mb-3" style="width: 18rem;">
+            <img src="https://media-exp1.licdn.com/dms/image/C4D03AQHgciDA2rrk5A/profile-displayphoto-shrink_800_800/0/1631239567230?e=1637193600&v=beta&t=-mySWz0fp4pyJRqVfwZtdB-_moj5-17__WgFiFtY6Kk" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Chomik, Guillermo</h5>
+                <p class="card-text" style="font-family: 'Times New Roman', Times, serif; color:brown">Guillermo es nuestro asesor contable, es la persona encargada de llevar todo lo referido a la administración de la empresa</p>
+            </div>
+        </div>
+    <div class="card me-3 mt-3 mb-3" style="width: 18rem;">
+        <img src="https://scontent.fpss2-1.fna.fbcdn.net/v/t31.18172-8/22179765_1927803180764759_8286492308842047151_o.jpg?_nc_cat=111&ccb=1-5&_nc_sid=174925&_nc_ohc=xBV2nB_teGQAX9s634Z&_nc_oc=AQmkYwW9IIOx16gT_v0-OfWQTsZmt2_nOiZunhPZX1F7eIcI2J_iwqp8hiEQMdyTLNI&_nc_ht=scontent.fpss2-1.fna&oh=ec5ed9d2ef1284045da9ada81b3d7e1c&oe=616A986A" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">De Lima, Juan Marcelo</h5>
+            <p class="card-text" style="font-family: 'Times New Roman', Times, serif; color:brown">Marcelo se encarga de toda la parte pedagogica de los cursos</p>
+        </div>
+    </div><div class="card me-3 mt-3 mb-3" style="width: 18rem;">
+        <img src="https://scontent.fpss2-1.fna.fbcdn.net/v/t1.6435-9/71317217_10220509173621193_8461720708588765184_n.jpg?_nc_cat=104&ccb=1-5&_nc_sid=174925&_nc_ohc=cPhmOb86ABMAX_Zp-n0&_nc_ht=scontent.fpss2-1.fna&oh=f865a714b4657f8bb8f89d8d212fb06a&oe=616B5FE2" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">Franco,Sergio Ariel</h5>
+            <p class="card-text" style="font-family: 'Times New Roman', Times, serif; color:brown">Sergio es nuestro tecnico especializado en diferentes lenguajes de programación.</p>
+        </div>
     </div>
+</div>  
 </div>
+
+<!-- Footer -->
+<footer class="bg-grey text-center text-white">
+  <!-- Grid container -->
+  <div class="container p-4">
+    <!-- Section: Social media -->
+    <section class="mb-4">
+      <!-- Facebook -->
+      <a class="btn btn-outline-light btn-floating m-1" href="https://www.facebook.com/sergiomarcelo.sym" role="button"
+        ><i class="fab fa-facebook-f"></i
+      ></a>
+
+      <!-- Twitter -->
+      <a class="btn btn-outline-light btn-floating m-1" href="https://twitter.com/?lang=es" role="button"
+        ><i class="fab fa-twitter"></i
+      ></a>
+
+      <!-- Google -->
+      <a class="btn btn-outline-light btn-floating m-1" href="https://drive.google.com/drive/folders/1PcM7vufZHFbChgf6wSEQAZiwHCBRPl5-?usp=sharing" role="button"
+        ><i class="fab fa-google"></i
+      ></a>
+
+      <!-- Instagram -->
+      <a class="btn btn-outline-light btn-floating m-1" href="https://www.instagram.com/" role="button"
+        ><i class="fab fa-instagram"></i
+      ></a>
+
+      <!-- Linkedin -->
+      <a class="btn btn-outline-light btn-floating m-1" href="https://www.linkedin.com/feed/" role="button"
+        ><i class="fab fa-linkedin-in"></i
+      ></a>
+
+      <!-- Github -->
+      <a class="btn btn-outline-light btn-floating m-1" href="https://github.com/" role="button"
+        ><i class="fab fa-github"></i
+      ></a>
+    </section>
+    <!-- Section: Social media -->
+
+    <!-- Section: Form -->
+    <section class="">
+      <form action="">
+        <!--Grid row-->
+        <div class="row d-flex justify-content-center">
+          <!--Grid column-->
+          <div class="col-auto">
+            <!-- Submit button -->
+           <a class="btn btn-outline-light btn-floating m-1" href="https://docs.google.com/forms/d/e/1FAIpQLSe1aqzuMeYGy1iD_i1y8jSOGOgpAJFA6iBgk5dxw3NEZMBiOQ/viewform?usp=sf_link" role="button">COMENTARIOS</a>
+          </div>
+          <!--Grid column-->
+        </div>
+        <!--Grid row-->
+      </form>
+    </section>
+    <!-- Section: Form -->
