--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -27,7 +27,85 @@
             {{{body}}}
         </main>
     <div class="card-footer">
-        Trabajo practico
+           <!-- Section: Text -->
+    <section class="mb-4">
+      <p style="color: white;">
+        SOMOS UNA EMPRESA QUE NOS DEDICAMOS AL DESARROLLO WEB, CON DIREFERENTES LENGUAES DE PROGRAMACIÓN, EN LA CUAL ANEXAMOS EL DICTADO DE CURSOS.
+      </p>
+    </section>
+    <!-- Section: Text -->
+
+    <!-- Section: Links -->
+    <section class="">
+      <!--Grid row-->
+      <div class="row">
+        <!--Grid column-->
+        <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+          <h5 class="text-uppercase"style="color: white;">Enlaces</h5>
+
+          <ul class="list-unstyled mb-0">
+            <li>
+              <a href="#!" class="text-white">Enlace en construcción</a>
+            </li>
+            <li>
+              <a href="#!" class="text-white">Enlace en construcción</a>
+            </li>
+          </ul>
+        </div>
+        <!--Grid column-->
+
+        <!--Grid column-->
+        <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+          <h5 class="text-uppercase"style="color: white;">Enlaces</h5>
+
+          <ul class="list-unstyled mb-0">
+            <li>
+              <a href="#!" class="text-white">Enlace en construcción</a>
+            </li>
+            <li>
+              <a href="#!" class="text-white">Enlace en construcción</a>
+            </li>
+          </ul>
+        </div>
+        <!--Grid column-->
+
+        <!--Grid column-->
+        <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+          <h5 class="text-uppercase"style="color: white;">Enlaces</h5>
+
+          <ul class="list-unstyled mb-0">
+            <li>
+              <a href="#!" class="text-white">Enlace en construcción</a>
+            </li>
+            <li>
+              <a href="#!" class="text-white">Enlace en construcción</a>
+            </li>
+          </ul>
+        </div>
+        <!--Grid column-->
+
+        <!--Grid column-->
+        <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+          <h5 class="text-uppercase" style="color: white;">Enlaces</h5>
+
+          <ul class="list-unstyled mb-0">
+            <li>
+              <a href="#!" class="text-white">Enlace en construcción</a>
+            </li>
+            <li>
+              <a href="#!" class="text-white">Enlace en construcción</a>
+            </li>
+          </ul>
+        </div>
+        <!--Grid column-->
+      </div>
+      <!--Grid row-->
+    </section>
+    <!-- Section: Links -->
+  </div>
+  <!-- Grid container -->
+</footer>
+<!-- Footer -->
     </div>
 </body>
 </html>
