--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -26,7 +26,7 @@
             {{>errors}}
             {{{body}}}
         </main>
-    <div class="card-footer">
+    <div class="card-footer mt-4">
            <!-- Section: Text -->
     <section class="mb-4">
       <p style="color: white;">
