--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,6 +1,84 @@
-<div class="p-5 mb-4 bg-light rounded-3 mt-3">
-      <div class="container-fluid py-5">
-        <h1 class="display-5 fw-bold"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Trabajo practico N°5</font></font></h1>
-        <p class="col-md-8 fs-4"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">pagina creada con javascript y nodejs con sus librerias</font></font></p>
-      </div>
-</div>
+<section data-bs-version="5.1" class="header1 cid-sJ7UO7OkfA mbr-fullscreen" id="header1-n">
+
+    
+
+    <div class="mbr-overlay" style="opacity: 0.6; background-color: rgb(89, 228, 101);"></div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-12 col-lg-5">
+                <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1" style="color:rgb(255, 255, 255)"><strong>Trabajo Practico 5  Node JS</strong></h1>
+                
+                <p class="mbr-text mbr-fonts-style display-7">
+                    Ideado como un entorno de ejecución de JavaScript orientado a eventos asíncronos, Node.js está diseñado para crear aplicaciones network escalables. En el siguiente ejemplo de "hola mundo", pueden atenderse muchas conexiones simultáneamente. Por cada conexión, se activa la devolución de llamada o callback, pero si no hay trabajo que hacer, Node.js se dormirá.</p>
+                <div class="mbr-section-btn mt-3"><a class="btn btn-secondary display-4" href="https://nodejs.org/es/">Website Oficial</a></div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section data-bs-version="5.1" class="content8 cid-sJ7UTTBLPV" id="content8-p">
+    <div class="container">
+        <div class="mbr-section-head">
+            <h4 class="mbr-section-title mbr-fonts-style align-center mb-0 display-2"><strong>Node JS  //Librerias//</strong></h4>
+            <h5 class="mbr-section-subtitle mbr-fonts-style align-center mb-0 mt-2 display-5">Este trabajo practico refleja algunas librerias utilizadas en Node</h5>
+        </div>
+        </div>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="counter-container col-md-12 col-lg-10">
+                
+                <div class="mbr-text mbr-fonts-style display-7">
+                    <ul>
+                        <li><strong>express: </strong>motor de plantillas en el servidor, de forma que se puede extender el html y poder aplicar 
+logica en ella ya que html no cuenta con esto(Express, es un marco de aplicación web de back-end 
+para Node.js, lanzado como software gratuito y de código abierto bajo 
+la licencia MIT. Está diseñado para crear aplicaciones web y API. .</li>
+                        <li><strong>express-handlebars: </strong>Básicamente se trata de crear un módulo que tiene una única
+ función que sirve para obtener un template y compilarlo. Este módulo es el
+ único de mi aplicación que conoce a Handlebars y toda plantilla que necesite usar se la pido a él.</li>
+                        <li><strong>express-session: </strong>El middleware express-session almacena los datos de sesión en el servidor;
+ sólo guarda el ID de sesión en la propia cookie, no los datos de sesión. De forma 
+predeterminada, utiliza el almacenamiento en memoria y no está diseñado para un entorno de producción..</li>
+                        <li><strong>method-override: </strong>esta libreria extiende la funcionalidad de los formularios, como por ejemplo el metodo put
+ y el metodo delete, que se envian a travez de metodos ajax o metodos javascript ya que los formularios por si solo
+no lo pueden hacer.</li>
+                        <li><strong>mongoose: </strong>es un modulo que nos permite unir a express con la base de datos de mongoDb.</li>
+                        <li><strong>passport: </strong>modulos para poder autenticar al usuario.</li>
+                        <li><strong>bcryptjs: </strong>modulo que permite encriptar el texto que se determine y asi convertirlo en un hash la idea es poder cifrar la 
+contraseña del usuario.</li>
+                        <li><strong>connect-flash:  </strong>modulo que sirve para poder realizar el envio de paquetes de datos entre vistas.</li>
+                        <li><strong>nodemond-D: </strong>permite reiniciar el servidor cuando se modifica el codigo sin necesidad de cerrar y reiniciarlo de manera manual.</li>
+                        
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section data-bs-version="5.1" class="video4 cid-sJ7UR6HrXs" id="video4-o">
+    
+    
+    <div class="container">
+        <div class="title-wrapper mb-5">
+            <h4 class="mbr-section-title mbr-fonts-style mb-0 display-2">
+                <strong>Algo mas sobre Node JS en Youtube</strong>
+            </h4>
+        </div>
+        <div class="row align-items-center">
+            <div class="col-12 col-lg-6 video-block">
+                <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/V17ozHd9ojI?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" width="640" height="480" frameborder="0" allowfullscreen></iframe></div>
+                
+            </div>
+            <div class="col-12 col-lg">
+                <div class="text-wrapper">
+                    <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5">
+                        
+                    </h5>
+                    <p class="mbr-text mbr-fonts-style display-7">
+                        Node.js es un entorno de ejecución de un solo hilo, de código abierto y multiplataforma para crear aplicaciones de red y del lado del servidor rápidas y escalables. Se ejecuta en el motor de ejecución de JavaScript V8, y utiliza una arquitectura de E/S basada en eventos y sin bloqueos, lo que la hace eficiente y adecuada para aplicaciones en tiempo real..</p>
+                </div>
+            </div>
+        </div>
+    </div>
